<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#E1E1E1"
    android:orientation="vertical"
    tools:context="gst.trainingcourse.gst_lesson5_ex1_tampm4.ui.SongDetailFragment">

    <LinearLayout
        android:id="@+id/header_desc_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/img_song"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_desc_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/song_title"
            android:textColor="#3F51B5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/t_c_gi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_song_singer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/th_lo_i"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/album"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/n_m_s_n_xu_t"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>